--- a/src/components/Player/TrackPicker.module.css
+++ b/src/components/Player/TrackPicker.module.css
@@ -67,7 +67,7 @@
 
 .checkmark {
   margin-right: 12px;
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .label {
