--- a/src/pages/HistoryPage.module.css
+++ b/src/pages/HistoryPage.module.css
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  transition: transform 150ms;
+  transition: transform 200ms ease-out;
 }
 
 .itemsGrid > * {
